Update PanViz to 0.3.0

--- a/inst/PanViz/PanViz.html
+++ b/inst/PanViz/PanViz.html
@@ -84,6 +84,15 @@
 					<col>
 					<col width="30%">
 					<tr>
+						<td><strong>Core threshold:</strong></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><input type="range" id="thresSlider" min="0.5" max="1" step="0.01" value="1"></td>
+						<td class="threshold">1.00</td>
+					</tr>
+					<tr><td>&nbsp</td></tr>
+					<tr>
 						<td><strong>Number of gene families:</strong></td>
 						<td class="nOverall">0</td>
 					</tr>
@@ -106,6 +115,9 @@
 					</tr>
 				</table>
 			</div>
+		</div>
+		<div id="tutorial">
+			<a class="infolink" href="https://github.com/thomasp85/PanViz/wiki" target="_blank"></a>	
 		</div>
 	</body>
 	<script type="text/javascript" src="data.js"></script>
